--- a/src/scss/partials/_leftSidebar.scss
+++ b/src/scss/partials/_leftSidebar.scss
@@ -3,8 +3,8 @@
   flex-direction: column;
   flex: 1;
   min-width: 18rem;
-  // ! -.5 because of border-left and border-right on whole page
-  max-width: calc(#{$large-screen} / 4);
+  // ! -1 because of border-left and border-right on whole page
+  max-width: calc(#{$large-screen} / 4 - 1px);
 
   @include respond-to(handhelds) {
     width: 100%;
